add stop script

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "echo \"No test script\"",
     "build": "webpack",
     "start": "webpack serve",
+    "stop": "taskkill -F -IM node.exe",
     "lint": "eslint app --ext .js,.jsx",
     "lint:fix": "eslint --fix app --ext .js,.jsx"
   },
