--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "echo \"No test script\"",
     "build": "webpack",
     "start": "webpack serve",
-    "stop": "killall -9 node",
+    "stop": "kill $(lsof -i :4000 | grep node | awk '{print $2}')",
     "lint": "eslint app --ext .js,.jsx",
     "lint:fix": "eslint --fix app --ext .js,.jsx"
   },
