--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "echo \"No test script\"",
     "build": "webpack",
     "start": "webpack serve",
-    "stop": "kill-port -p 3000",
+    "stop": "killall node",
     "lint": "eslint app --ext .js,.jsx",
     "lint:fix": "eslint --fix app --ext .js,.jsx"
   },
